2622 [File Indexer]         choose by default in the file selector "All supported files"
2621 [OneClick]             fixed the option "Languages to select if selection does not match". Bug #822
2620 [HD Streams Extractor] improved handling of unsupported tracks
2619 [OneClick]             fixed language detection (regression of 2617)
2618 [HD Streams Extractor] fixed "+ Options" handling in case of an error (regression of 2486)
2617 [Muxer] + [OneClick]   improved language detection based on the file name. bug #819
2616 [HD Streams Extractor] improved feature selection
2615 [AVS Script Creator]   improved "Analyse" handling
2614 [L-SMASH Indexer]      do not expect a cache file for LSMASH*Source()
2613 [Update]               do not delete NeroAacEnc during eac3to update
2612 [AVS Script Creator]   fixed "Analyse" function (regression of 2611)
2611 [AVS Script Creator]   fixed value range for cycleR in TDecimate()
2610                        fixed not able to open AVS scripts in some use cases (regression of 2607)
2609                        removed the DPI aware flag (requires Windows Vista+)
                            The application will now look blurry when using 150+% DPI but all controls are visible
2608 [QAAC]                 fixed a crash when the settings have to be recreated (regression of 2604)
2607                        reduced number of required AviSynth script accesses
2606 [MediaInfo]            reduced log messages if the language information is emtpy
2605 [Update]               fixed not using the proper package disable date from the server configuration (regression of 2523)
2604 [QAAC]                 do not delete portable runtime files during an update if they are in the QTfiles subdirectory
2603 [AudioEncoder]         fixed FFAudioSource. part II (regression of 2591)
2602 [AudioEncoder]         fixed FFAudioSource (regression of 2591)
2601 [OneClick]             fixed DAR button behaviour