@@ -61,8 +61,6 @@ namespace MeGUI.packages.tools.oneclick
             audioConfigurations = new List<OneClickAudioControl>();
             audioConfigurations.Add(oneClickAudioControl1);
             oneClickAudioControl1.SetDefault();
-            cbUnknownLanguage.Items.AddRange(new List<string>(LanguageSelectionContainer.Languages.Keys).ToArray());
-            cbUnknownLanguage.SelectedItem = "English";
         }
 
         #region Gettable<OneClickSettings> Members
@@ -117,8 +115,6 @@ namespace MeGUI.packages.tools.oneclick
                     arrDefaultSubtitle.Add(s);
                 val.DefaultSubtitleLanguage = arrDefaultSubtitle;
 
-                val.DefaultLanguage = cbUnknownLanguage.SelectedItem.ToString();
-
                 List<string> arrIndexerPriority = new List<string>();
                 foreach (string s in lbIndexerPriority.Items)
                     arrIndexerPriority.Add(s);
@@ -169,9 +165,6 @@ namespace MeGUI.packages.tools.oneclick
                     else
                         AudioAddTrack(o);
                 }
-
-                if (!String.IsNullOrEmpty(value.DefaultLanguage))
-                    cbUnknownLanguage.SelectedItem = value.DefaultLanguage;
 
                 List<string> arrNonDefaultAudio = new List<string>(LanguageSelectionContainer.Languages.Keys);
                 arrNonDefaultAudio.Add("[none]");
