@@ -609,12 +609,6 @@ namespace MeGUI
         {
             _oSettings = settings.Clone();
 
-            foreach (OneClickStreamControl oStream in audioTracks)
-                oStream.DefaultLanguage = _oSettings.DefaultLanguage;
-
-            foreach (OneClickStreamControl oStream in subtitleTracks)
-                oStream.DefaultLanguage = _oSettings.DefaultLanguage;
-
             if (_videoInputInfo != null)
             {
                 List<OneClickStream> arrAudioTrackInfo = new List<OneClickStream>();
@@ -1495,7 +1489,6 @@ namespace MeGUI
             a.ShowDelay = subtitleTracks[0].ShowDelay;
             a.ShowDefaultStream = subtitleTracks[0].ShowDefaultStream;
             a.ShowForceStream = subtitleTracks[0].ShowForceStream;
-            a.DefaultLanguage = subtitleTracks[0].DefaultLanguage;
             a.chkDefaultStream.CheckedChanged += new System.EventHandler(this.chkDefaultStream_CheckedChanged);
             a.SomethingChanged += new EventHandler(audio1_SomethingChanged);
             a.Filter = subtitleTracks[0].Filter;
@@ -1686,7 +1679,6 @@ namespace MeGUI
             a.StandardStreams = audioTracks[0].StandardStreams;
             a.CustomStreams = audioTracks[0].CustomStreams;
             a.SelectedStreamIndex = 0;
-            a.DefaultLanguage = audioTracks[0].DefaultLanguage;
             a.SomethingChanged += new EventHandler(audio1_SomethingChanged);
             a.EncodingMode = audioTracks[0].EncodingMode;
             a.initProfileHandler();
